[package]
name = "sunvox_clap"
version = "0.1.0"
edition = "2021"
authors = ["SunVox CLAP Plugin"]
description = "A CLAP audio plugin integrating SunVox synthesizer"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "sunvox_standalone_test"
path = "src/bin/standalone_test.rs"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
